@@ -23,7 +23,7 @@
      Maven 2 project configuration file
      http://maven.apache.org/maven2/
 
-     Apache SIS build requires Java 10, but compilation result can be executed on Java 8.
+     Apache SIS build requires Java 10 or higher, but compiled files can be executed on Java 8.
      Setting the SIS_DATA environment variable before build is optional but recommended.
 
      Build development snapshot:    mvn clean install
@@ -466,8 +466,20 @@
       <dependency>
         <groupId>javax</groupId>
         <artifactId>javaee-api</artifactId>
-        <version>8.0</version>
+        <version>8.0.1</version>
         <scope>provided</scope>
+      </dependency>
+      <dependency>
+        <groupId>jakarta.xml.bind</groupId>
+        <artifactId>jakarta.xml.bind-api</artifactId>
+        <version>${jaxb.version}</version>
+        <scope>provided</scope>             <!-- Because available in JDK8. -->
+      </dependency>
+      <dependency>
+        <groupId>org.glassfish.jaxb</groupId>
+        <artifactId>jaxb-runtime</artifactId>
+        <version>${jaxb.version}</version>
+        <scope>test</scope>
       </dependency>
       <dependency>
         <groupId>org.apache.commons</groupId>
@@ -528,6 +540,12 @@
       <artifactId>junit</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>   <!-- To be removed after https://issues.apache.org/jira/browse/SIS-469 is done. -->
+      <groupId>jakarta.xml.bind</groupId>
+      <artifactId>jakarta.xml.bind-api</artifactId>
+      <version>${jaxb.version}</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
 
@@ -548,6 +566,7 @@
     <sis.plugin.version>${project.version}</sis.plugin.version>
     <sis.non-free.version>1.0-M1</sis.non-free.version>                 <!-- Used only if "non-free" profile is enabled. -->
     <geoapi.version>3.1-SNAPSHOT</geoapi.version>
+    <jaxb.version>2.3.2</jaxb.version>
   </properties>
 
   <profiles>
@@ -666,7 +685,6 @@
               <value>${project.build.directory}/derby.log</value>
             </property>
           </systemProperties>
-          <argLine>--add-modules java.xml.bind,java.xml.ws.annotation,javafx.graphics</argLine>
         </configuration>
       </plugin>
 
